@@ -1,7 +1,7 @@
 package projeto.pi.reciclemultiplique.infra.security;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
@@ -29,18 +29,18 @@ public class SecurityFilterUs extends OncePerRequestFilter {
         var token = this.recoverToken(request);
         var login = tokenService.validateToken(token);
 
-        if(login != null){
-            Usuario usuario = userRepository.findByEmail(login).orElseThrow(() -> new RuntimeException("Ususario não encontrado"));
-            var authorities = Collections.singletonList(new SimpleGrantedAuthority("ROLE_USER"));
+        if (login != null) {
+            Usuario usuario = userRepository.findByEmail(login).orElseThrow(() -> new RuntimeException("Usuario não encontrado"));
+            var authorities = List.of(new SimpleGrantedAuthority("ROLE_USER")); // Adicionando a role ao usuário
             var authentication = new UsernamePasswordAuthenticationToken(usuario, null, authorities);
             SecurityContextHolder.getContext().setAuthentication(authentication);
         }
         filterChain.doFilter(request, response);
     }
 
-    private String recoverToken(HttpServletRequest request){
+    private String recoverToken(HttpServletRequest request) {
         var authHeader = request.getHeader("Authorization");
-        if(authHeader == null) return null;
+        if (authHeader == null) return null;
         return authHeader.replace("Bearer ", "");
     }
 }
